--- a/examples/java/psg-spring-boot-demo/src/main/resources/application.properties
+++ b/examples/java/psg-spring-boot-demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-clientId=your_psg_username
-token=your_api_token
+clientId=CLIENT_ID
+token=API_TOKEN
 
 s3.key=AWS_ACCCESS_KEY
 s3.secret=AWS_SECRET_KEY
@@ -8,3 +8,5 @@ s3.region=BUCKET_REGION
 
 grpc.client.psg-services.address=psg-testnet.iog.services:2001
 grpc.client.psg-services.negotiationType=TLS
+
+spring.jackson.serialization.fail-on-self-references=false
