PSGS-686 - removed serializers

--- a/examples/java/native-assets/src/main/resources/application.properties
+++ b/examples/java/native-assets/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-clientId=test.sender.oleksandr@gmail.com
-token=QtSnS-GqdjqRyPzqEQHguye7GCULc8p0uToiljSpZM4=
+clientId=CLIENT_ID
+token=API_TOKEN
 
 server.port=8181
 
-akka.grpc.client.test.clientId=test.sender.oleksandr@gmail.com
-akka.grpc.client.test.apiKey=QtSnS-GqdjqRyPzqEQHguye7GCULc8p0uToiljSpZM4=
+akka.grpc.client.test.clientId=CLIENT_ID
+akka.grpc.client.test.apiKey=API_TOKEN
 akka.grpc.client.test.host=test.iog.services
 akka.grpc.client.test.port=443
 akka.grpc.client.test.use-tls=true
