--- a/examples/java/native-assets/src/main/resources/application.properties
+++ b/examples/java/native-assets/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-clientId=CLIENT_ID
-token=API_TOKEN
+clientId=
+token=
+host=
+port=443
 
 server.port=8181
 
-akka.grpc.client.test.clientId=CLIENT_ID
-akka.grpc.client.test.apiKey=API_TOKEN
-akka.grpc.client.test.host=test.iog.services
+akka.grpc.client.test.clientId=
+akka.grpc.client.test.apiKey==
+akka.grpc.client.test.host=
 akka.grpc.client.test.port=443
 akka.grpc.client.test.use-tls=true
