PSGS-921: native-assets examples

--- a/examples/java/native-assets/src/main/resources/application.properties
+++ b/examples/java/native-assets/src/main/resources/application.properties
@@ -5,6 +5,6 @@ server.port=8181
 
 akka.grpc.client.test.clientId=tomas.matejovic@iohk.io
 akka.grpc.client.test.apiKey=ho2_9BgjkDjg5brFZNE6BF-2Sowui_Dy1FxsZ4BtHNU=
-akka.grpc.client.test.host=dev.iog.services
-akka.grpc.client.test.port=443
-akka.grpc.client.test.use-tls=true
+akka.grpc.client.test.host=localhost
+akka.grpc.client.test.port=2000
+akka.grpc.client.test.use-tls=false
