--- a/examples/java/native-assets/pom.xml
+++ b/examples/java/native-assets/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.7.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>io.psg</groupId>
+	<groupId>iog.psg</groupId>
 	<artifactId>native-assets</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>native-assets-example</name>
