PSGS-921: removed references to dev env

--- a/examples/java/native-assets-example/src/main/resources/application.properties
+++ b/examples/java/native-assets-example/src/main/resources/application.properties
@@ -1,10 +1,4 @@
-clientId=tomas.matejovic@iohk.io
-token=ho2_9BgjkDjg5brFZNE6BF-2Sowui_Dy1FxsZ4BtHNU=
+clientId=CLIENT_ID
+token=API_TOKEN
 
 server.port=8181
-
-akka.grpc.client.test.clientId=tomas.matejovic@iohk.io
-akka.grpc.client.test.apiKey=ho2_9BgjkDjg5brFZNE6BF-2Sowui_Dy1FxsZ4BtHNU=
-akka.grpc.client.test.host=dev.iog.services
-akka.grpc.client.test.port=443
-akka.grpc.client.test.use-tls=true
